adelante y atras en grafico

--- a/mysite/templates/panel.html
+++ b/mysite/templates/panel.html
@@ -133,6 +133,10 @@
 							</tbody>
 						</table>
 					</div>
+                    <div class="btn-group">
+                        <a href="/privado/ver/{{desde-paso}}/{{hasta-paso}}" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left"></span></a>
+                        <a href="/privado/ver/{{desde+paso}}/{{hasta+paso}}" class="btn btn-default"><span class="glyphicon glyphicon-chevron-right"></span></a>
+                    </div>
 				</div>
 			</div>
 			</div>
